--- a/fizzBuzz-repository/pom.xml
+++ b/fizzBuzz-repository/pom.xml
@@ -1,9 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.intraway</groupId>
-    <artifactId>fizzBuzz</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>fizzBuzz-repository</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.intraway</groupId>
+		<artifactId>fizzBuzz</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	<artifactId>fizzBuzz-repository</artifactId>
+	<name>fizzBuzz-repository</name>
+	<packaging>jar</packaging>
+
 </project>
