--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.intraway</groupId>
-  <artifactId>fizzBuzz</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>Fizz Buzz project</name>
-  <modules>
-  	<module>fizzBuzz-service</module>
-  	<module>fizzBuzz-web</module>
-  	<module>fizzBuzz-util</module>
-  	<module>fizzBuzz-repository}</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>com.intraway</groupId>
+	<artifactId>fizzBuzz</artifactId>
+	<version>1.0.0</version>
+	<packaging>pom</packaging>
+	<name>fizzBuzz</name>
+	
+	<properties>
+		<java.version>11</java.version>
+	</properties>
+	
+	<modules>
+		<module>fizzBuzz-util</module>
+		<module>fizzBuzz-repository</module>
+		<module>fizzBuzz-service</module>
+		<module>fizzBuzz-web</module>
+	</modules>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-dependencies</artifactId>
+		<version>2.1.1.RELEASE</version>
+	</parent>
+
 </project>
